Refactor config definitions and enhance OSV ecosystem handling
Removes the 'allowedValues' parameter from RuntimeConfigDefinition.